--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,9 @@
 image: rvancea/maven-chrome-jdk8:latest
 
-build:
-  stage: build
-  script:
-    - mvn compile
+#build:
+#  stage: build
+#  script:
+#    - mvn compile
 
 test:
   stage: test
