--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,13 @@
-image: iatapay/maven-java11-selenium
+image: maven:3.6.3-jdk-8
 
-
-build:
-  stage: build
-  script:
-    - mvn compile
+before_script:
+  - apt-get update
+  - apt-get install -y unzip
+  - wget https://chromedriver.storage.googleapis.com/79.0.3945.36/chromedriver_linux64.zip
+  - unzip chromedriver_linux64.zip
+  - mv chromedriver /usr/local/bin/chromedriver
+  - chmod +x /usr/local/bin/chromedriver
 
 test:
-  stage: test
   script:
     - mvn test
