--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,8 @@ image: maven:3.6.3-jdk-8
 before_script:
   - apt-get update
   - apt-get install -y unzip
-  - wget https://chromedriver.storage.googleapis.com/79.0.3945.36/chromedriver_linux64.zip
+  - CHROME_DRIVER_VERSION=`curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE`
+  - wget https://chromedriver.storage.googleapis.com/$CHROME_DRIVER_VERSION/chromedriver_linux64.zip
   - unzip chromedriver_linux64.zip
   - mv chromedriver /usr/local/bin/chromedriver
   - chmod +x /usr/local/bin/chromedriver
