--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,17 @@ image: maven:3.6.3-jdk-8
 
 before_script:
   - apt-get update
-  - ldd /usr/local/bin/chromedriver
-  - apt-get -y install libglib2.0-0
+  - #!/bin/bash
+
+    # List the required libraries
+    required_libs=$(ldd /usr/local/bin/chromedriver | awk '{if (match($3,"/")){ printf("%s ",$3); }}')
+
+    # Install the necessary packages
+    for lib in $required_libs; do
+    apt-get -y install $(dpkg -S $lib | awk '{sub(":"," "); print $1}')
+    done
+  #  - apt-get -y install libglib2.0-0
+#  - sudo apt-get install libnss3
   - apt-get install -y unzip
   - CHROME_DRIVER_VERSION=`curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE`
   - wget https://chromedriver.storage.googleapis.com/$CHROME_DRIVER_VERSION/chromedriver_linux64.zip
