--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: maven:3.6.3-jdk-8
 
 before_script:
   - apt-get update
-    #  - apt-get -y install libglib2.0-0
+  - apt-get -y install libglib-2.0.so.0
 #  - sudo apt-get install libnss3
   - apt-get install -y unzip
   - CHROME_DRIVER_VERSION=`curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE`
