--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,8 @@ before_script:
   - apt-get update
   - apt-get -y install libglib2.0-0
   - apt-get -y install libnss3
+  - apt-get -y install libxcb.so.1
+
   - apt-get install -y unzip
   - CHROME_DRIVER_VERSION=`curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE`
   - wget https://chromedriver.storage.googleapis.com/$CHROME_DRIVER_VERSION/chromedriver_linux64.zip
