--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ before_script:
   - apt-get update
   - apt-get -y install libglib2.0-0
   - apt-get -y install libnss3
-  - apt-get -y install libxcb.so.1
+  - apt-get -y install libxcb
 
   - apt-get install -y unzip
   - CHROME_DRIVER_VERSION=`curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE`
