--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ before_script:
   - apt-get install -y google-chrome-stable
 
   # Download and install ChromeDriver
-  - wget https://chromedriver.storage.googleapis.com/$CHROME_DRIVER_VERSION/chromedriver_linux64.zip
+  - wget https://chromedriver.storage.googleapis.com/108.0.5359.71/chromedriver_linux64.zip
   - unzip chromedriver_linux64.zip
   - mv chromedriver /usr/local/bin/chromedriver
   - chmod +x /usr/local/bin/chromedriver
